--- a/package.json
+++ b/package.json
@@ -31,15 +31,17 @@
     "prop-types": "^15.6.1",
     "querystringify": "1.0.0",
     "ramda": "^0.25.0",
-    "react": "16.3.1",
+    "react": "16.5.0",
     "react-native": "0.55.1",
     "react-native-animatable": "^1.3.0",
     "react-native-config": "^0.10.0",
+    "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "4.3.0",
     "react-navigation": "^1.5.11",
     "react-navigation-redux-helpers": "^1.0.4",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.5",
     "redux-saga": "^0.16.0",
     "reduxsauce": "0.7.0",
     "seamless-immutable": "^7.1.2"
